# Animal-Well-editor

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
lib/glad/include/glad/: gl.h
lib/nativefiledialog/: nfd.cpp
src/: aes.cpp  aes.hpp  dos_parser.cpp  dos_parser.hpp  game_data.cpp  game_data.hpp  glStuff.hpp  globals.hpp  history.cpp  history.hpp  image.cpp  image.hpp  main.cpp  map_slice.hpp  parsing.hpp  rendering.cpp  rendering.hpp  selection.cpp  selection.hpp  texture.hpp
src/rendering/: geometry.cpp  geometry.hpp  pipeline.cpp  pipeline.hpp  renderData.hpp
src/shaders/: bg.fs  bg.vs  bloom_darken.fs  blur.fs  color_correction.fs  flat.fs  flat.vs  light.fs  light.vs  light_blur.fs  merge.fs  merge.vs  merge_bg.fs  merge_bg_tex.fs  mvp.vs  raw.vs  shader.fs  shader.vs  textured.fs  textured.vs  tile.fs  tile.vs  visibility.fs  visibility_mask.fs  water.fs  waterfalls.fs
src/structures/: ambient.hpp  asset.cpp  asset.hpp  entity.hpp  map.hpp  sprite.hpp  tile.hpp
src/windows/: errors.cpp  errors.hpp  search.cpp  search.hpp  sprite_viewer.cpp  sprite_viewer.hpp  texture_importer.cpp  texture_importer.hpp  tile_list.cpp  tile_list.hpp  tile_viewer.cpp  tile_viewer.hpp
